--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="registration.html" target="myFrame">Register</a>
             </td>
                 <td>
-                    <iframe src="/images/study_image.jpeg" name="myFrame"  height="300px" width="700px" frameborder="0"></iframe>
+                    <iframe src="study_image.jpeg" name="myFrame" object-fit="cover" height="500" width="100%" scrolling="no" overflow="hidden"width="100%" frameborder="0"></iframe>
                 </td ></tr>
             <tr> <td colspan="2">Footer</td></tr>
             
