--- a/CSS_Work/index.html
+++ b/CSS_Work/index.html
@@ -35,10 +35,10 @@
         <div class="Child2">Child2</div>
         <div class="Child3">Child3</div>
         <div class="Child4">Child4</div>
-        <div class="Child1">Child1</div>
+        <!-- <div class="Child1">Child1</div>
         <div class="Child2">Child2</div>
         <div class="Child3">Child3</div>
-        <div class="Child4">Child4</div>
+        <div class="Child4">Child4</div> -->
     </div>
 </body>
 </html>
