--- a/CSS_Work/gridlayout.html
+++ b/CSS_Work/gridlayout.html
@@ -13,7 +13,7 @@
                 <img src="./images/amazon_logo.png" height="100" width="200" alt="">
             </div>
             <div class="row12">
-                <h2>ABES, Ghaziabad</h2>
+                <h2>ABESEC, Ghaziabad</h2>
             </div>
             <div class="row13">
                 <input type="text" placeholder="search items">
@@ -39,8 +39,39 @@
                <li>Mobiles</li> 
             </ul>
         </div>
-        <div class="row3"></div>
-        <div class="row4"></div>
+        <div class="row3">
+            <img src="./images/row3_bg.jpg" alt="">
+        </div>
+        <div class="row4">
+            <div class="row41">
+            <div class="row411">
+                <div>Fridge
+                </div>
+                <div><img src="./row4_images/fridges.jpg" width="100" height="100" alt=""></div>
+            </div>
+            <div class="row412">
+                <div>Chimney</div>
+                <div>
+                    <img src="./row4_images/chimney.jpg" height="100" width="100" alt="">
+                </div>
+            </div>
+            <div class="row413">
+                <div>Front Loads</div>
+                <div>
+                    <img src="./row4_images/front_loads.jpg" height="100" width="100" alt="">
+                </div>
+            </div>
+            <div class="row414">
+                <div>AC</div>
+                <div>
+                    <img src="./row4_images/ac.jpg" height="100" width="100" alt="">
+                </div>
+            </div>
+            </div>
+            <div class="row42">Row42</div>
+            <div class="row43">Row43</div>
+            <div class="row44">Row44</div>
+        </div>
     </div>
 </body>
 </html>
